[project]
name = "mal-simulator"
version = "0.2.7"
authors = [
  { name="Andrei Buhaiu", email="buhaiu@kth.se" },
  { name="Joakim Loxdal", email="loxdal@kth.se" },
  { name="Jakob Nyberg", email="jaknyb@kth.se" },
  { name="Nikolaos Kakouros", email="nkak@kth.se" }
]
description = "A MAL compliant simulator."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "py2neo>=2021.2.3",
  "mal-toolbox~=0.3.0",
  "PyYAML>=6.0.1"
]
license = {text = "Apache Software License"}
keywords = ["mal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[project.optional-dependencies]
ml = [
  "numpy>=1.21.4",
  "pettingzoo>=1.24.2",
  "gymnasium~=1.0",
]
dev = [
  "pytest",
  "mypy",
  "ruff",
]

[project.urls]
"Homepage" = "https://github.com/mal-lang/mal-simulator"
"Bug Tracker" = "https://github.com/mal-lang/mal-simulator/issues"
"Repository" = "https://github.com/mal-lang/mal-simulator"

[project.scripts]
malsim = "malsim.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["malsim*"]

[tool.pytest.ini_options]
pythonpath = ['.']
