[project]
name = "mal-simulator"
version = "1.0.2"
authors = [
  { name="Andrei Buhaiu", email="buhaiu@kth.se" },
  { name="Joakim Loxdal", email="loxdal@kth.se" },
  { name="Jakob Nyberg", email="jaknyb@kth.se" },
  { name="Nikolaos Kakouros", email="nkak@kth.se" }
]
description = "A MAL compliant simulator."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mal-toolbox==1.*",
  "PyYAML>=6.0.1",
  "numpy>=1.21.4",
  "scipy"
]
license = {text = "Apache Software License"}
keywords = ["mal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[project.optional-dependencies]
ml = [
  "pettingzoo>=1.24.2",
  "gymnasium~=1.0",
]
dev = [
  "pytest",
  "mypy",
  "ruff",
]

[project.urls]
"Homepage" = "https://github.com/mal-lang/mal-simulator"
"Bug Tracker" = "https://github.com/mal-lang/mal-simulator/issues"
"Repository" = "https://github.com/mal-lang/mal-simulator"

[project.scripts]
malsim = "malsim.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["malsim*"]

[tool.pytest.ini_options]
pythonpath = ['.']

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_no_return = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_any_generics = true
