[project]
name = "mal-simulator"
version = "2.2.0"
authors = [
  { name="Andrei Buhaiu", email="buhaiu@kth.se" },
  { name="Joakim Loxdal", email="loxdal@kth.se" },
  { name="Jakob Nyberg", email="jaknyb@kth.se" },
  { name="Nikolaos Kakouros", email="nkak@kth.se" },
  { name="Sandor Berglund", email="sandorb@kth.se" }
]
description = "A MAL compliant simulator."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mal-toolbox>=2.0.0,<3.0.0",
  "PyYAML>=6.0.1",
  "numpy>=1.21.4",
  "scipy",
  "networkx",
  "requests"
]
license = {text = "Apache Software License"}
keywords = ["mal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[project.optional-dependencies]
ml = [
  "pettingzoo>=1.24.2",
  "gymnasium>=1.0,<1.2.2",
]
dev = [
  "pytest",
  "mypy",
  "ruff",
  "types-requests",
  "types-PyYAML",
  "pytest-profiling",
  "snakeviz",
]

[project.urls]
"Homepage" = "https://github.com/mal-lang/mal-simulator"
"Bug Tracker" = "https://github.com/mal-lang/mal-simulator/issues"
"Repository" = "https://github.com/mal-lang/mal-simulator"

[project.scripts]
malsim = "malsim.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["malsim*"]

[tool.pytest.ini_options]
pythonpath = ['.']

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_no_return = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_any_generics = true
allow_subclassing_any = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    
    "E", # pycodestyle
    "F", # Pyflakes
    "W", # pycodestyle warnings
    "A", # flake8-annotations
    "B", # flake8-bugbear
    "PERF", # flake8-performance
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
    "NPY", # numpy-specific rules
    "FURB", # refurb
    "C4", # flake8-comprehensions
    "PIE", # bandit
    #"S",  # flake8-bandit
    #"PL", # pylint
    #"I", # isort
    #"UP", # pyupgrade
    #"FBT",
    #"RET",
    #"ARG",
    #"C90",
]
ignore = [
  "B019", # Use of cache can lead to memory leaks
  "B011", # Do not assert false
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "S101", # Use of assert detected. The enclosed code will be removed when compiling to optimized bytecode.
]

[tool.ruff.format]
quote-style = "single"
